--- a/index.html
+++ b/index.html
@@ -1,72 +1,85 @@
 <head>
   <!-- Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <style>
+    .chart {
+      max-height: calc(200px + 20px) !important;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
 
-  <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+  <div id="myDiv" class="chart">
+    <!-- Plotly chart will be drawn inside this DIV -->
+  </div>
   <script>
-   // Enter a speed between 0 and 180
-var level = 175;
+    // Enter a speed between 0 and 180
+    var level = 50;
 
-// Trig to calc meter point
-var degrees = 180 - level,
-	 radius = .5;
-var radians = degrees * Math.PI / 180;
-var x = radius * Math.cos(radians);
-var y = radius * Math.sin(radians);
+    // Trig to calc meter point
+    var degrees = 180 - level,
+      radius = .5;
+    var radians = degrees * Math.PI / 180;
+    var aX = 0.025 * Math.cos((degrees - 90) * Math.PI / 180);
+    var aY = 0.025 * Math.sin((degrees - 90) * Math.PI / 180);
+    var bX = -0.025 * Math.cos((degrees - 90) * Math.PI / 180);
+    var bY = -0.025 * Math.sin((degrees - 90) * Math.PI / 180);
+    var cX = radius * Math.cos(radians);
+    var cY = radius * Math.sin(radians);
 
-// Path: may have to change to create a better triangle
-var mainPath = 'M -.0 -0.025 L .0 0.025 L ',
-	 pathX = String(x),
-	 space = ' ',
-	 pathY = String(y),
-	 pathEnd = ' Z';
-var path = mainPath.concat(pathX,space,pathY,pathEnd);
-
-var data = [{ type: 'scatter',
-   x: [0], y:[0],
-	marker: {size: 28, color:'850000'},
-	showlegend: false,
-	name: 'speed',
-	text: level,
-	hoverinfo: 'text+name'},
-  { values: [50/6, 50/6, 50/6, 50/6, 50/6, 50/6, 50],
-  rotation: 90,
-  text: ['TOO FAST!', 'Pretty Fast', 'Fast', 'Average',
-			'Slow', 'Super Slow', ''],
-  textinfo: 'text',
-  textposition:'inside',
-  marker: {colors:['rgba(14, 127, 0, .5)', 'rgba(110, 154, 22, .5)',
-						 'rgba(170, 202, 42, .5)', 'rgba(202, 209, 95, .5)',
-						 'rgba(210, 206, 145, .5)', 'rgba(232, 226, 202, .5)',
-						 'rgba(255, 255, 255, 0)']},
-  labels: ['151-180', '121-150', '91-120', '61-90', '31-60', '0-30', ''],
-  hoverinfo: 'label',
-  hole: .5,
-  type: 'pie',
-  showlegend: false
-}];
-
-var layout = {
-  shapes:[{
-      type: 'path',
-      path: path,
-      fillcolor: '850000',
-      line: {
-        color: '850000'
+    var path = 'M ' + aX + ' ' + aY +
+      ' L ' + bX + ' ' + bY +
+      ' L ' + cX + ' ' + cY +
+      ' Z';
+    var data = [
+      {
+        values: [1, 1, 1, 1, 4],
+        rotation: 90,
+        text: ['Excellent', 'Average', 'Warning', 'Poor', ''],
+        textinfo: 'text',
+        textposition: 'inside',
+        marker: {
+          colors: ['rgba(14, 127, 0, .5)', 'rgba(110, 154, 22, .5)',
+            'rgba(249, 168, 37, .5)', 'rgba(183,28,28, .5)',
+            'rgba(0, 0, 0, 0.5)'
+          ]
+        },
+        hoverinfo: 'label',
+        hole: .5,
+        type: 'pie',
+        showlegend: false
       }
-    }],
-  title: '<b>Gauge</b> <br> Speed 0-100',
-  height: 1000,
-  width: 1000,
-  xaxis: {zeroline:false, showticklabels:false,
-			 showgrid: false, range: [-1, 1]},
-  yaxis: {zeroline:false, showticklabels:false,
-			 showgrid: false, range: [-1, 1]}
-};
+    ];
 
-Plotly.newPlot('myDiv', data, layout);
+    var layout = {
+      shapes: [{
+        type: 'path',
+        path: path,
+        fillcolor: '850000',
+        line: {
+          color: '850000'
+        }
+      }],
+      height: 400,
+      width: 400,
+      xaxis: {
+        zeroline: false,
+        showticklabels: false,
+        showgrid: false,
+				fixedrange: true,
+        range: [-1, 1]
+      },
+      yaxis: {
+        zeroline: false,
+        showticklabels: false,
+        showgrid: false,
+				fixedrange: true,
+        range: [-1, 1]
+      }
+    };
+
+    Plotly.newPlot('myDiv', data, layout);
   </script>
 </body>
